--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--almanac--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--almanac--slideshow.html.twig
@@ -74,7 +74,7 @@
   <div class="entity-slideshow__item-inner">
     <a href="{{ url }}" class="entity-slideshow__item-link">
       <div class="entity-slideshow__image page">
-        <img style="height: 100%;width: 2000px;" src="http://skoven-i-skolen.localhost/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/footer-graphic.svg">
+        <img style="height: 100%;width: 2000px;" src="/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/footer-graphic.svg">
         <div class="entity-slideshow__type entity-slideshow__type--news">
           {{ node.type.entity.label }}
         </div>
