--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--teaser.html.twig
@@ -73,22 +73,16 @@
 
 {% set typeAltrerLink = node.field_article_type.entity.field_page_link.0.url %}
 {% set typeUrl = path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_article_type.entity.id}) %}
-{% set dataDialogOpts = { closeText: "", classes: { "ui-dialog": "article-modal" }} %}
 
 <div class="inspiration-overview__item">
 	<div class="inspiration-overview__item-inner">
-    <a href="{{ url }}" class="inspiration-overview__item-link">
+		<a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
 			<div class="inspiration-overview__image">
         {% if content.field_list_media[0] %}
           {{ content.field_list_media }}
         {% elseif content.field_list_media_anonymous[0]%}
           {{ content.field_list_media_anonymous }}
         {% endif %}
-				<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
-					<div class="inspiration-overview__type">
-						{{ node.field_article_type.entity.name.value }}
-					</div>
-				</a>
 			</div>
 			<div class="inspiration-overview__content">
 				{% if content.field_class[0]|length > 0 %}
@@ -97,7 +91,7 @@
               'attributes': '',
               'svgIconName': 'reading'
             } %}
-						{# loop through field_class items #}
+						{# loop through field_class #}
 						{% for item in content.field_class['#items'] %}
 							{% set term = item.entity %}
 							{{ term.name.value }}
@@ -108,16 +102,19 @@
 						{% endfor %}
 					</div>
 				{% endif %}
-        <a href="{{ url }}" class="inspiration-overview__item-link">
+				<div class="inspiration-overview__content__wrapper">
 					<div class="inspiration-overview__title">
 						{{ label }}
 					</div>
 					<div class="inspiration-overview__description">
 						{{ content.field_description }}
 					</div>
-				</a>
+				</div>
 			</div>
 		</a>
+    <a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}" class="inspiration-overview__type">
+      {{ node.field_article_type.entity.name.value }}
+    </a>
 		{% if subject_items|length > 0 %}
 			<div class="inspiration-overview__subject">
 				{% if subject_items|length > 2 %}
