--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--list.html.twig
@@ -78,29 +78,27 @@
           {% elseif content.field_list_media_anonymous[0]%}
             {{ content.field_list_media_anonymous }}
           {% endif %}
-          <a href="/kort" aria-label="{{ node.field_article_type.entity.name.value }}">
-            <div class="inspiration-overview__type">
-              Prik på kort
+				</div>
+        <div class="inspiration-overview__content__wrapper">
+          <div class="inspiration-overview__content">
+            <div class="inspiration-overview__title">
+              {{ label }}
             </div>
-          </a>
-				</div>
+            <div class="inspiration-overview__date">
+              {% set createdDay = node.getCreatedTime|date('j') %}
+              {% set createdMonth = node.getCreatedTime|date('F') %}
+              {% set createdYear = node.getCreatedTime|date('Y') %}
+              {{ createdDay }} {{ createdMonth|t }} {{ createdYear }}
+            </div>
+            <div class="inspiration-overview__description">
+              {{ content.field_summary }}
+            </div>
+          </div>
+        </div>
 			</a>
-			<a href="{{ url }}" class="inspiration-overview__content__wrapper">
-				<div class="inspiration-overview__content">
-					<div class="inspiration-overview__title">
-						{{ label }}
-					</div>
-					<div class="inspiration-overview__date">
-						{% set createdDay = node.getCreatedTime|date('j') %}
-						{% set createdMonth = node.getCreatedTime|date('F') %}
-						{% set createdYear = node.getCreatedTime|date('Y') %}
-            {{ createdDay }} {{ createdMonth|t }} {{ createdYear }}
-					</div>
-					<div class="inspiration-overview__description">
-						{{ content.field_summary }}
-					</div>
-				</div>
-			</a>
+      <a href="/kort" aria-label="{{ node.field_article_type.entity.name.value }}" class="inspiration-overview__type">
+        Prik på kort
+      </a>
 		</div>
 	</div>
 </div>
