--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--slideshow.html.twig
@@ -73,7 +73,7 @@
   <div class="entity-slideshow__item-inner">
     <a href="{{ url }}" class="entity-slideshow__item-link">
       <div class="entity-slideshow__image page">
-        <img src="http://skoven-i-skolen.localhost/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/footer-graphic.svg">
+        <img src="/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/footer-graphic.svg">
         <div class="entity-slideshow__type entity-slideshow__type--news">
           {{ node.type.entity.label }}
         </div>
