--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--page--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--page--list.html.twig
@@ -71,12 +71,14 @@
 
 {% set subject_items = content.field_subject['#items'] %}
 
+{% set typeAltrerLink = node.field_article_type.entity.field_page_link.0.url %}
+{% set typeUrl = path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_article_type.entity.id}) %}
+
 <div class="inspiration-overview__item">
 	<div class="inspiration-overview__item-inner">
 		<a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
 			<div class="inspiration-overview__image">
 				{{ content.field_list_media }}
-				<a href="/{{ url|split('/')[1] }}" aria-label="{{ node.field_article_type.entity.name.value }}"></a>
 			</div>
 			<div class="inspiration-overview__content">
 				{% if content.field_class[0]|length > 0 %}
@@ -98,14 +100,14 @@
 
 					</div>
 				{% endif %}
-				<a href="{{ url }}" class="inspiration-overview__content__wrapper">
+				<div class="inspiration-overview__content__wrapper">
 					<div class="inspiration-overview__title">
 						{{ label }}
 					</div>
 					<div class="inspiration-overview__description">
 						{{ content.field_description }}
 					</div>
-				</a>
+        </div>
 			</div>
 		</a>
 		{% if subject_items|length > 0 %}
@@ -126,5 +128,10 @@
 				{% endif %}
 			</div>
 		{% endif %}
+    {% if node.field_article_type.entity.name.value %}
+      <a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}" class="inspiration-overview__type">
+        {{ node.field_article_type.entity.name.value }}
+      </a>
+    {% endif %}
 	</div>
 </div>
