Changed link to news overview in node news templates

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
@@ -89,7 +89,7 @@
         </div>
       </div>
     </a>
-    <a href="/nyhedoversigt" class="inspiration-overview__type inspiration-overview__type--news">
+    <a href="/nyheder" class="inspiration-overview__type inspiration-overview__type--news">
       {{ 'Nyhed'|t }}
     </a>
 	</div>
