--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--slideshow.html.twig
@@ -89,7 +89,7 @@
           </div>
         </div>
       </a>
-      <a href="/nyhedoversigt" class="entity-slideshow__type entity-slideshow__type--news">
+      <a href="/nyheder" class="entity-slideshow__type entity-slideshow__type--news">
         {{ node.type.entity.label }}
       </a>
     </div>
