SIS2-673: Changed entity overview form on search page to not show total in content area

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -83,7 +83,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-9">
 				<div class="row">
-					{{ element['content'] }}
+					{{ element['content']|without('total') }}
 				</div>
 			</div>
 		</div>
