--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -43,7 +43,7 @@
         <form action="/search" method="get" aria-label="search">
           <div class="header-search__input-field" id="search">
             <input {{ create_attribute().addClass('input')
-              .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required', 'required')
+              .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t)
               .setAttribute('placeholder', 'Search the entire site'|t)
               .setAttribute('name', 'text')
               .setAttribute('aria-label', 'Search')
