SIS2-674: Changed map place based material headline

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
@@ -66,7 +66,7 @@
     <div class="col-md-4 col-lg-3 col-xs-12 col-lg-offset-1 filters">
       <div class="same-line-text-and-icon">
         <div class="text">
-          <h5>Stedsbaserede materialer</h5>
+          <h5>Stedbaserede materialer</h5>
         </div>
         <div class="icon">
           {% include '@reusable-component/svg-icon.twig' with {
