SIS2-711: Changed dot on map template and markup to show latitude and longitude if no address is provided + style changes for latitude and longitude fields

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -75,6 +75,10 @@
     min-width: 85px;
     font-weight: var(--heading-font-weight);
 
+    .facts-box__content-item--lat-lon & {
+      min-width: 100px;
+    }
+
     &-author-image {
       width: 85px;
       max-height: 85px;
