--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
@@ -139,7 +139,7 @@
         {% endif %}
       </div>
       <div class="col-xs-12 col-md-4 col-lg-4 col-lg-offset-1">
-        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] or node.sis_map_address_dawa.value %}
+        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] or node.sis_map_address_dawa.value or node.lat.value and node.lon.value %}
           <div class="facts-box">
             <div class="facts-box__title">
                 Hvem, hvad, hvor
@@ -198,16 +198,16 @@
                   </div>
                 {% endif %}
                 {% if node.lat.value and node.lon.value %}
-                <div class="facts-box__content-item">
-                  <div class="facts-box__content-item-label">Breddegr.</div>
+                <div class="facts-box__content-item facts-box__content-item--lat-lon">
+                  <div class="facts-box__content-item-label">Breddegrad</div>
                   <div class="facts-box__content-item-value">{{ node.lat.value }}</div>
                 </div>
-                <div class="facts-box__content-item">
-                  <div class="facts-box__content-item-label">Længde</div>
+                <div class="facts-box__content-item facts-box__content-item--lat-lon">
+                  <div class="facts-box__content-item-label">Længdegrad</div>
                   <div class="facts-box__content-item-value">{{ node.lon.value }}</div>
                 </div>
               {% endif %}
-          </div>
+            </div>
           </div>
         {% endif %}
 
