--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -128,6 +128,7 @@
       display: flex;
       grid-template-columns: repeat(2, 1fr);
       width: 100%;
+      padding: 0 15px;
       background-color: rgb(62 62 62 / 75%);
 
       @media (--viewport-ms-min) {
