SIS2-729: Fix layout of search forms and visitkort profiles

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
@@ -124,6 +124,8 @@
     </div>
   </div>
 </div>
-<div class="profile__overview">
-  {{ content.field_organization_overview }}
+<div class="container layout__region layout__region--first">
+  <div class="profile__overview">
+    {{ content.field_organization_overview }}
+  </div>
 </div>
