SIS2-723: restyling card popup text and icon to make them aligned down

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -335,7 +335,17 @@
 
 .inspiration-overview__image .icon,
 .inspiration-overview__type--bottom {
-  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: auto;
+  display: flex;
+  align-items: center;
+  padding: 0 6px;
+  background-color: var(--color-primary);
+}
+
+.inspiration-overview__type__icon-container {
+  margin-left: 3px;
 }
 
 .inspiration-overview__item-link + .inspiration-overview__list-links {
