--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--list.html.twig
@@ -78,44 +78,52 @@
 
 <div class="inspiration-overview__item">
 	<div class="inspiration-overview__item-inner">
-    <a href="{{ url }}" class="inspiration-overview__item-link use-ajax" data-dialog-options="{{ dataDialogOpts|json_encode()|e('html_attr') }}" data-dialog-type="modal">
+		<a href="{{ url }}" class="inspiration-overview__item-link use-ajax" data-dialog-options="{{ dataDialogOpts|json_encode()|e('html_attr') }}" data-dialog-type="modal">
 			<div class="inspiration-overview__image">
-        {% if content.field_list_media[0] %}
-          {{ content.field_list_media }}
-        {% elseif content.field_list_media_anonymous[0]%}
-          {{ content.field_list_media_anonymous }}
-        {% endif %}
-        {% include '@reusable-component/svg-icon.twig' with {
+				{% if content.field_list_media[0] %}
+					{{ content.field_list_media }}
+				{% elseif content.field_list_media_anonymous[0]%}
+					{{ content.field_list_media_anonymous }}
+				{% endif %}
+
+				<div class="inspiration-overview__type inspiration-overview__type--bottom">
+					<div>
+						Materiale fra andet site
+					</div>
+					<div class="inspiration-overview__type__icon-container">
+						{% include '@reusable-component/svg-icon.twig' with {
           'attributes': '',
           'svgIconName': 'external-link'
         } %}
-        <div class="inspiration-overview__type inspiration-overview__type--bottom">Materiale fra andet site</div>
+					</div>
+				</div>
+
 			</div>
-      <div class="inspiration-overview__content">
-        {% if content.field_class[0]|length > 0 %}
-          <div class="inspiration-overview__class">
-            {% include '@reusable-component/svg-icon.twig' with {
+			<div class="inspiration-overview__content">
+				{% if content.field_class[0]|length > 0 %}
+					<div class="inspiration-overview__class">
+						{% include '@reusable-component/svg-icon.twig' with {
               'attributes': '',
               'svgIconName': 'reading'
             } %}
-            {# loop through field_class items #}
-            {% for item in content.field_class['#items'] %}
-              {% set term = item.entity %}
-              {{ term.name.value }}
-              {# adding separator  if its not last element in loop #}
-              {% if not loop.last %}
-                {{ '|' }}
-              {% endif %}
-            {% endfor %}
-          </div>
-        {% endif %}
-        <div class="inspiration-overview__title">
-          {{ label }}
-        </div>
-        <div class="inspiration-overview__description">
-          {{ content.field_description }}
-        </div>
-      </div>
+						{# loop through field_class items #}
+						{% for item in content.field_class['#items'] %}
+							{% set term = item.entity %}
+							{{ term.name.value }}
+							{# adding separator  if its not last element in loop #}
+							{% if not loop.last %}
+								{{ '|' }}
+							{% endif %}
+						{% endfor %}
+					</div>
+				{% endif %}
+				<div class="inspiration-overview__title">
+					{{ label }}
+				</div>
+				<div class="inspiration-overview__description">
+					{{ content.field_description }}
+				</div>
+			</div>
 		</a>
 		{% if subject_items|length > 0 %}
 			<div class="inspiration-overview__subject">
@@ -135,8 +143,8 @@
 				{% endif %}
 			</div>
 		{% endif %}
-    <a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}" class="inspiration-overview__type">
-      {{ node.field_article_type.entity.name.value }}
-    </a>
+		<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}" class="inspiration-overview__type">
+			{{ node.field_article_type.entity.name.value }}
+		</a>
 	</div>
 </div>
