SIS2-706: Show all node types on user page under unpublished and published content

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
@@ -70,7 +70,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-8 col-md-8">
 						<div class="news-page__latest-header">
-							<h3>{{ 'Latest articles'|t }}</h3>
+							<h3>{{ 'Latest published content'|t }}</h3>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
