--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -1,7 +1,6 @@
 .facts-box {
   margin-bottom: 40px;
   word-wrap: break-word;
-  hyphens: auto;
   background-color: var(--color-white);
   box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
 
@@ -46,6 +45,7 @@
 
   &__content {
     padding: 30px 30px 40px;
+    word-break: break-word;
 
     ul {
       margin: 0;
